--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Pinsent</string>
 
-    <string name="api_url">http://10.28.120.17:3000</string>
+    <string name="api_url">http://smart-factory.nutc-imac.com</string>
     <string name="register_url">/create/user</string>
     <string name="login_url">/login</string>
     <string name="create_device_url">/device/create</string>
