--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="update_url">/sensor/update</string>
     <string name="deletes_sensor_url">/sensor/delete</string>
     <string name="delete_device_url">/device/delete</string>
+    <string name="option_url">/customer/opinion</string>
 
 </resources>
